qmsystem2 (1.3.2) unstable; urgency=low

  [Matias Muhonen]
  * QmHeartbeat documentation is unclear (Fixes: NB#266900)
  * Improve error handling of QmCABC (Fixes: NB#270772)
  * QmUSBMode::mountStatus does not return correct info (Fixes: NB#273012)
  * Make the usbmode-test more robust

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 18 Jul 2011 14:00:26 +0300

qmsystem2 (1.3.1) unstable; urgency=low

  [Matias Muhonen]
  * Fix email addresses
  * Document a missing error code for QmUSBMode::error signal
  * Fix a double-free in qmkeyd

  [Matti Halme]
  * Emit battery capacity signal also when remaining charging time changes (Fixes: NB#264181)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 10 Jun 2011 10:57:17 +0300

qmsystem2 (1.3.0) unstable; urgency=low

  [Yang Yang]
  * Fix display-test, unlock tk and device before setting display on
  * Add "NFC" test to devicemode-test

  [Matias Muhonen]
  * Fix a double-free in QmHeartbeat
  * Fix a double-free in QmProcessWatchdog
  * Fix thermal-test, provide the dsme::DeviceStateControl credential
  * Improve QmWatchdog documentation

  [Ilya Dogolazky]
  * tzset() has to be called before signalling time setting change (Fixes: NB#259764)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Thu, 26 May 2011 06:54:57 +0300

qmsystem2 (1.2.0) unstable; urgency=low

  [Yang Yang]
  * Add "SDK" test to manual-usbmode-test

  [Matias Muhonen]
  * Add new enumeration "SDK" to MeeGo::QmUSBMode::Mode (Fixes: NB#255893)
  * Add WAKEUP_SLOT_* to QmHeartbeat and document global wakeup slots (Fixes: NB#255597)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 16 May 2011 10:54:39 +0300

qmsystem2 (1.1.12) unstable; urgency=low

  [Matias Muhonen]
  * Determine offline mode correctly with NFC (Fixes: NB#254535)

 -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Fri, 13 May 2011 07:27:17 +0300

qmsystem2 (1.1.11) unstable; urgency=low

  [Yang Yang]
  * Fix manual-lock-test

  [Matias Muhonen]