@@ -5,8 +5,9 @@ qmsystem2 (1.3.2) unstable; urgency=low
   * Improve error handling of QmCABC (Fixes: NB#270772)
   * QmUSBMode::mountStatus does not return correct info (Fixes: NB#273012)
   * Make the usbmode-test more robust
+  * Make the manual-usbmode-test more robust
 
- -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Mon, 18 Jul 2011 14:00:26 +0300
+ -- Matias Muhonen <ext-matias.muhonen@nokia.com>  Tue, 19 Jul 2011 12:13:00 +0300
 
 qmsystem2 (1.3.1) unstable; urgency=low
 
